# OpenWave

./: .env  Cargo.toml  README.md  build.rs
src/: keyboard.slint  main.rs  shader_acoustic_simulation.cpp
src/ui/: LPFWindow.slint  Main.slint  dials.slint  keyboard.slint
